- [MINOR] Move ATS span start/end to MicrosoftAuthServiceOperation (#2068)
- [MINOR] Move AT interactive span start/end to Account Chooser (#2069)
- [PATCH] Fix AbstractMethodError in makeCurrentSpan for otel (#2083)
- [MINOR] Emit number of concurrent silent requests in telemetry (#2093)
- [PATCH] Fix missing visibility of the LTW app (#2097)
- [MINOR] Add span names for storage and encryption spans (#2104)
- [MINOR] Invalid required broker protocol version check in Acquire Token/Acquire Token Silent (#2101)
- [PATCH] Add UI elemnent wait timeout in AadLoginComponentHandler (#2095)

V.13.0.1
----------
- [PATCH] Stop caching account manager values. Make BrokerDiscoveryClient coroutine-safe (#2050)
- [PATCH] Revert "Getting rid of account manager strategy in MSAL/OneAuth (#1988)" (#2041)
- [MINOR] Add BrokerDiscoveryClient + Tests (#2039)
- [MAJOR] Consolidate IStorageSupplier logic (#2033)
- [MINOR] Add active broker cache (#2030)
- [MAJOR] Added support for DeviceCodeFlow with device id claims. New API is only available in version 13 or higher (#2044)
- [MINOR] Replacing SHA-1 used in broker validation with SHA-512 (#2019)
- [MINOR] Removing thumbprint check from PKeyAuth challenge (#2045)
- [MINOR] Add android 14 check for skipping strong box isolation in pop token (#2053)
- [PATCH] Fix min broker protocol version value for MSA accounts in broker (#2062)
- [MINOR] Clear cache of access tokens with an old application identifier field (#2058)
- [MINOR] Instrument PRTv3 flows (#2023)

V.12.0.0
----------
- [MINOR] make getCurrentActiveBrokerPackageName case insensitive and trims the authenticator type (#2026)
- [PATCH] Update version for org.json:json to 20230227 (#2022)
- [MAJOR] Move Broker encryption logic to broker code. Some more refactoring. (#2016)
- [PATCH] Fix Error Type thrown for NO_ACCOUNT_FOUND (#2006)
- [MINOR] Separate constants for max client and broker protocol versions (#2008)