@@ -112,7 +112,7 @@ public class OneAuthTestApp extends App implements IFirstPartyApp {
         UiAutomatorUtils.handleButtonClick("com.microsoft.oneauth.testapp:id/get_access_token_button");
         try {
             // Add a delay so that UI is updated with the token successfully
-            Thread.sleep(2000);
+            Thread.sleep(5000);
         } catch (final InterruptedException e) {
             e.printStackTrace();
         }
@@ -143,6 +143,10 @@ public class OneAuthTestApp extends App implements IFirstPartyApp {
 
     public void handleBackButton() {
         UiAutomatorUtils.pressBack();
+    }
+
+    public void handleUserNameInput(@NonNull final String input) {
+        UiAutomatorUtils.handleInput("com.microsoft.oneauth.testapp:id/account_hints_edittext", input);
     }
 
     @Override
