@@ -32,6 +32,7 @@ V.14.0.0
 - [PATCH] Fix AbstractMethodError in makeCurrentSpan for otel (#2083)
 - [MINOR] Emit number of concurrent silent requests in telemetry (#2093)
 - [PATCH] Fix missing visibility of the LTW app (#2097)
+- [MINOR] Add support to MsalTestApp for selecting Auth Scheme, Click Generate SHR & remove user button (#2103)
 - [MINOR] Add span names for storage and encryption spans (#2104)
 - [MINOR] Invalid required broker protocol version check in Acquire Token/Acquire Token Silent (#2101)
 - [PATCH] Add UI elemnent wait timeout in AadLoginComponentHandler (#2095)
